--- a/config/database.yml
+++ b/config/database.yml
@@ -24,13 +24,13 @@ default: &default
 
 development:
   <<: *default
-  database: mo_lar_development
+  database: molar_usuarios_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: mo_lar
+  #username: molar_usuarios
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: mo_lar_test
+  database: molar_usuarios_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: mo_lar_production
-  username: mo_lar
-  password: <%= ENV["MO_LAR_DATABASE_PASSWORD"] %>
+  database: molar_usuarios_production
+  username: molar_usuarios
+  password: <%= ENV["MOLAR_USUARIOS_DATABASE_PASSWORD"] %>
